<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_title"
        android:contentDescription="@string/describe_dialog_title"
        />

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="160dp"
        android:background="@drawable/activity_bg"
        android:splitMotionEvents="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:text="@string/score_dialog_text"
            android:includeFontPadding="false"
            android:textSize="22sp"/>


        <Button
            android:id="@+id/scoreMainBtn"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_button"
            android:text="@string/go_to_main"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/quitBtn"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_button"
            android:text="@string/quiz_app"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            />



    </RelativeLayout>

</LinearLayout>
