<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_title"
        android:contentDescription="@string/describe_dialog_title"
        />

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:background="@drawable/activity_bg"
        android:splitMotionEvents="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:text="@string/quit_str"
            android:textSize="26sp"/>

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="88dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_button"
                android:text="@string/yes_str"
                android:textColor="@android:color/white"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <Button
                android:id="@+id/noBtn"
                android:layout_width="88dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_button"
                android:text="@string/no_str"
                android:textColor="@android:color/white"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
               android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

        </RelativeLayout>



</LinearLayout>